--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "slim/slim": "^3.0",
         "phpunit/phpunit": "^7.4",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "abraham/twitteroauth": "^0.9.2"
     }
 }
